--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "fastapi>=0.115.12",
     "google-analytics-data>=0.18.19",
     "google-auth>=2.40.3",
